# utility

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  tests.cmake
cmake/: FOSL-utilityConfig.cmake
example/: CMakeLists.txt  Makefile
example/.clangd/index/: assert.h.02A57EBB17C94618.idx  base.cpp.C6DAEA6A38E5F9F4.idx  bits.hpp.5F632E1ACCCE1BF3.idx  bitstream.cpp.25E1CC3CDBE2B24D.idx  bitstream.cpp.320B47853F594D13.idx  bitstream.cpp.384A11655925B37F.idx  bitstream.cpp.836347A2A5DBBE84.idx  input.cpp.CD2535E41092E92D.idx  main.cpp.C6E8800573BDDD97.idx  main.cpp.E33E7C24A090DD13.idx  main.cpp.E653503EB0656AB8.idx  main.cpp.FF7033679FDF388C.idx  math.hpp.F90F763812C69E65.idx  output.cpp.89B04CBE4ADB7BE9.idx  types.h.C7B029A67C3FC307.idx  utility.cpp.3083FE285C29C00A.idx  utility.cpp.3C665D1D2E58EC10.idx  utility.cpp.FFCA225AEE117CB3.idx  utility.hpp.A9FAAFE9BD2AC7D7.idx
example/project/: CMakeLists.txt
example/project/assert/: CMakeLists.txt
example/project/assert/source/: main.cpp
example/project/metaprogramming/: CMakeLists.txt
example/project/metaprogramming/source/: main.cpp
example/script/: cmake_debug_flags.py  cmake_release_flags.py
source/FOSL/: utility.cpp  utility.hpp
source/FOSL/utility/: assert.h  bits.hpp  math.hpp  metaprogramming(move out of FOSL::utility).hpp  metaprogramming.hpp  optional.hpp  types.h
test/: CMakeLists.txt
test/types/: CMakeLists.txt
test/types/source/: main.cpp
test/unit/types/: CMakeLists.txt
test/unit/types/source/: main.cpp
